force-app/main/default/objects/BenefitAssignment.object
<CustomObject>
    <fields>
        <fullName>API_FAAmount__c</fullName>
        <formula>text(floor( FA_Amount__c )) &amp;&quot;.&quot;&amp; lpad(text((FA_Amount__c-floor(FA_Amount__c))*100),2,&quot;0&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_FAAmount</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FA_Amount__c</fullName>
        <label>FA Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Moving_On_Other_Type__c</fullName>
        <label>Moving On Other Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Type_Provided__c</fullName>
        <label>Other Type Provided</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Outcome__c</fullName>
        <label>Referral Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisPATHReferralOutcome</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Services_Record_Type__c</fullName>
        <label>Services Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>141: PATH service</fullName>
                    <label>PATH service</label>
                </value>
                <value>
                    <fullName>142: RHY service connections R14</fullName>
                    <label>RHY service connections</label>
                </value>
                <value>
                    <fullName>143: HOPWA service</fullName>
                    <label>HOPWA service</label>
                </value>
                <value>
                    <fullName>144: SSVF service</fullName>
                    <label>SSVF service</label>
                </value>
                <value>
                    <fullName>151: HOPWA financial assistance</fullName>
                    <label>HOPWA financial assistance</label>
                </value>
                <value>
                    <fullName>152: SSVF financial assistance</fullName>
                    <label>SSVF financial assistance</label>
                </value>
                <value>
                    <fullName>161: PATH referral</fullName>
                    <label>PATH referral</label>
                </value>
                <value>
                    <fullName>200: Bed night</fullName>
                    <label>Bed night</label>
                </value>
                <value>
                    <fullName>210: HUD-VASH OTH voucher tracking</fullName>
                    <label>HUD-VASH OTH voucher tracking</label>
                </value>
                <value>
                    <fullName>300: Moving On assistance provided</fullName>
                    <label>Moving On assistance provided</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Services_Type_Provided__c</fullName>
        <label>Services Type Provided</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Services_Record_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1: Re-engagement</fullName>
                    <label>Re-engagement</label>
                </value>
                <value>
                    <fullName>2: Screening</fullName>
                    <label>Screening</label>
                </value>
                <value>
                    <fullName>3: Habilitation/rehabilitation</fullName>
                    <label>Habilitation/rehabilitation</label>
                </value>
                <value>
                    <fullName>4: Community mental health</fullName>
                    <label>Community mental health</label>
                </value>
                <value>
                    <fullName>5: Substance use treatment</fullName>
                    <label>Substance use treatment</label>
                </value>
                <value>
                    <fullName>6: Case management</fullName>
                    <label>Path Case management</label>
                </value>
                <value>
                    <fullName>7: Residential supportive services</fullName>
                    <label>Residential supportive services</label>
                </value>
                <value>
                    <fullName>8: Housing minor renovation</fullName>
                    <label>Housing minor renovation</label>
                </value>
                <value>
                    <fullName>9: Housing moving assistance</fullName>
                    <label>Housing moving assistance</label>
                </value>
                <value>
                    <fullName>10: Housing eligibility determination</fullName>
                    <label>Housing eligibility determination</label>
                </value>
                <value>
                    <fullName>11: Security deposits</fullName>
                    <label>PATH Security deposits</label>
                </value>
                <value>
                    <fullName>12: One-time rent for eviction prevention</fullName>
                    <label>One-time rent for eviction prevention</label>
                </value>
                <value>
                    <fullName>14: Clinical assessment</fullName>
                    <label>Clinical assessment</label>
                </value>
                <value>
                    <fullName>2: Community service/service learning (CSL)</fullName>
                    <label>Community service/service learning (CSL)</label>
                </value>
                <value>
                    <fullName>5: Education</fullName>
                    <label>Education</label>
                </value>
                <value>
                    <fullName>6: Employment and/or training services</fullName>
                    <label>Employment and/or training services</label>
                </value>
                <value>
                    <fullName>7: Criminal justice /legal services</fullName>
                    <label>Criminal justice /legal services</label>
                </value>
                <value>
                    <fullName>8: Life skills training</fullName>
                    <label>RHYS Life skills training</label>
                </value>
                <value>
                    <fullName>10: Parenting education for youth with children</fullName>
                    <label>Parenting education for youth with children</label>
                </value>
                <value>
                    <fullName>12: Post-natal care for client (person who gave birth)</fullName>
                    <label>Post-natal care for client (person who gave birth)</label>
                </value>
                <value>
                    <fullName>13: Pre-natal care</fullName>
                    <label>Pre-natal care</label>
                </value>
                <value>
                    <fullName>14: Health/medical care</fullName>
                    <label>RHYS Health/medical care</label>
                </value>
                <value>
                    <fullName>17: Substance use disorder treatment</fullName>
                    <label>Substance use disorder treatment</label>
                </value>
                <value>
                    <fullName>18: Substance use disorder Ed/Prevention Services</fullName>
                    <label>Substance use disorder Ed/Prevention Services</label>
                </value>
                <value>
                    <fullName>26: Home-based Services</fullName>
                    <label>Home-based Services</label>
                </value>
                <value>
                    <fullName>27: Post-natal newborn care (wellness exams; immunizations)</fullName>
                    <label>Post-natal newborn care (wellness exams; immunizations)</label>
                </value>
                <value>
                    <fullName>28: STD Testing</fullName>
                    <label>STD Testing</label>
                </value>
                <value>
                    <fullName>29: Street-based Services</fullName>
                    <label>Street-based Services</label>
                </value>
                <value>
                    <fullName>1: Adult day care and personal assistance</fullName>
                    <label>Adult day care and personal assistance</label>
                </value>
                <value>
                    <fullName>2: Case management</fullName>
                    <label>Case Management</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Type_Provided__c</fullName>
        <label>Sub Type Provided</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Services_Type_Provided__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1: VA vocational and rehabilitation counseling</fullName>
                    <label>VA vocational and rehabilitation counseling</label>
                </value>
                <value>
                    <fullName>2: Employment and training services</fullName>
                    <label>Employment and training services</label>
                </value>
                <value>
                    <fullName>3: Educational assistance</fullName>
                    <label>Educational assistance</label>
                </value>
                <value>
                    <fullName>4: Health care services</fullName>
                    <label>Health care services</label>
                </value>
                <value>
                    <fullName>1: Health care services</fullName>
                    <label>SSVF Health care services</label>
                </value>
                <value>
                    <fullName>2: Daily living services</fullName>
                    <label>Daily living services</label>
                </value>
                <value>
                    <fullName>3: Personal financial planning services</fullName>
                    <label>Personal financial planning services</label>
                </value>
                <value>
                    <fullName>4: Transportation services</fullName>
                    <label>Transportation services</label>
                </value>
                <value>
                    <fullName>5: Income support services</fullName>
                    <label>Income support services</label>
                </value>
                <value>
                    <fullName>6: Fiduciary and representative payee services</fullName>
                    <label>Fiduciary and representative payee services</label>
                </value>
                <value>
                    <fullName>7: Legal services - child support</fullName>
                    <label>Legal services - child support</label>
                </value>
                <value>
                    <fullName>8: Legal services - eviction prevention</fullName>
                    <label>Legal services - eviction prevention</label>
                </value>
                <value>
                    <fullName>9: Legal services - outstanding fines and penalties</fullName>
                    <label>Legal services - outstanding fines and penalties</label>
                </value>
                <value>
                    <fullName>10: Legal services - restore / acquire driver’s license</fullName>
                    <label>Legal services - restore / acquire driver’s license</label>
                </value>
                <value>
                    <fullName>11: Legal services – other</fullName>
                    <label>Legal services – other</label>
                </value>
                <value>
                    <fullName>12: Child care</fullName>
                    <label>Child care</label>
                </value>
                <value>
                    <fullName>13: Housing counseling</fullName>
                    <label>Housing counseling</label>
                </value>
                <value>
                    <fullName>1: Personal financial planning services</fullName>
                    <label>SSVF Personal financial planning services</label>
                </value>
                <value>
                    <fullName>2: Transportation services</fullName>
                    <label>SSVFS Transportation services</label>
                </value>
                <value>
                    <fullName>3: Income support services</fullName>
                    <label>SSVF Income support services</label>
                </value>
                <value>
                    <fullName>4: Fiduciary and representative payee services</fullName>
                    <label>SSVF Fiduciary and representative payee services</label>
                </value>
                <value>
                    <fullName>5: Legal services - child support</fullName>
                    <label>SSVVF Legal services - child support</label>
                </value>
                <value>
                    <fullName>6: Legal services - eviction prevention</fullName>
                    <label>SSVF Legal services - eviction prevention</label>
                </value>
                <value>
                    <fullName>7: Legal services - outstanding fines and penalties</fullName>
                    <label>SSVF Legal services - outstanding fines and penalties</label>
                </value>
                <value>
                    <fullName>8: Legal services - restore / acquire driver’s license</fullName>
                    <label>SSVF Legal services - restore / acquire driver’s license</label>
                </value>
                <value>
                    <fullName>9: Legal services – other</fullName>
                    <label>SSVF Legal services – other</label>
                </value>
                <value>
                    <fullName>10: Child care</fullName>
                    <label>SSVF Child care</label>
                </value>
                <value>
                    <fullName>11: Housing counseling</fullName>
                    <label>SSVF Housing counseling</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <recordTypes>
        <fullName>HMIS_Benefit_Assignment</fullName>
        <active>true</active>
        <label>HMIS Benefit Assignment</label>
    </recordTypes>
</CustomObject>